add content to the quote html component

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,3 +1,17 @@
 <div class="container text-center">
     <h1>The Quotes App</h1>
 </div>
+<div class="contaier-fluid">
+    <div class="text">
+    <h4>About</h4>
+    <hr>
+  
+    <p>
+       <br>
+        We believe access to the spoken word gives us a unique glimpse into the historic, 
+        political and cultural history of the world we share. 
+        <br> Further, we believe that inherent in 
+        these quotations lies the essence of the individuals we have quoted; their interests, 
+        belief system, comments and ideas are captured in time to benefit our generation and the next. </p>
+    </div>
+</div>
