--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -15,3 +15,32 @@
         belief system, comments and ideas are captured in time to benefit our generation and the next. </p>
     </div>
 </div>
+<div class="container ">
+   
+    <form  class="w-50 mt-5 mb-5">
+        <div class="form-group">
+            <label for="description">Quote:</label>
+            <textarea class="form-control" id="description" rows="4"  name="description" ></textarea>
+            <div  class="alert alert-danger">
+                <p>A Quote is required</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="author">Author:</label>
+            <input type="text"  name="author" class="form-control" required>
+           <div  class ="alert alert-danger">
+               <p>Author is required</p>
+           </div>
+        </div>
+        <div class="form-group">
+            <label for="name">Posted by:</label>
+            <input type="text"  class="form-control" required>
+           <div class ="alert alert-danger">
+               <p>Name is required</p>
+           </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary" >Add Quote</button>
+    </form>
+   
+</div>
