--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,1 +1,46 @@
-<p>quote-form works!</p>
+<div class="container text-center">
+    <h1>The Quotes App</h1>
+</div>
+<div class="contaier-fluid">
+    <div class="text">
+    <h4>About</h4>
+    <hr>
+  
+    <p>
+       <br>
+        We believe access to the spoken word gives us a unique glimpse into the historic, 
+        political and cultural history of the world we share. 
+        <br> Further, we believe that inherent in 
+        these quotations lies the essence of the individuals we have quoted; their interests, 
+        belief system, comments and ideas are captured in time to benefit our generation and the next. </p>
+    </div>
+</div>
+<div class="container ">
+   
+    <form  class="w-50 mt-5 mb-5">
+        <div class="form-group">
+            <label for="description">Quote:</label>
+            <textarea class="form-control" id="description" rows="4"  name="description" ></textarea>
+            <div  class="alert alert-danger">
+                <p>A Quote is required</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="author">Author:</label>
+            <input type="text"  name="author" class="form-control" required>
+           <div  class ="alert alert-danger">
+               <p>Author is required</p>
+           </div>
+        </div>
+        <div class="form-group">
+            <label for="name">Posted by:</label>
+            <input type="text"  class="form-control" required>
+           <div class ="alert alert-danger">
+               <p>Name is required</p>
+           </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary" >Add Quote</button>
+    </form>
+   
+</div>
