add bacground image

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+body{
+    background-image: url("../src/assets/back.jpg");
+    background-repeat: no-repeat;
+      background-size: cover;
+}
