--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,1 +1,22 @@
-<p>quote-detail works!</p>
+
+<div class="card-title text-muted  ">
+    <span>Posted: {{quote.datePosted|dateCount}} days ago </span>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-9">
+          <div class="row">
+            <div class="col-md-3">
+              <button type="button" class="btn btn-sm btn-success"><i class="fa fa-thumbs-up" (click)="incrementLikes()">{{quote.likes}}</i></button>  
+            </div>
+            <div class="col-md-3">
+              <button type="button" class="btn btn-sm btn-danger"><i class="fa fa-thumbs-down" (click)="incrementDislikes()">{{quote.dislikes}}</i></button>  
+            </div>
+          </div>
+         
+        </div>
+        <div class="col-md-3 text-right">
+          <button (click)='quoteDelete(true)' id="del">Delete</button>
+        </div>
+      </div>
+    </div>
