--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,5 +1,6 @@
-<div class="container text-center">
-    <h1>The Quotes App</h1>
+<div class="container  H1">
+    <h1>code generator 2.0.</h1>
+    <h3>Create a new Quote</h3>
 </div>
 <div class="contaier-fluid">
     <div class="text">
@@ -17,25 +18,25 @@
 </div>
 <div class="container ">
    
-    <form  class="w-50 mt-5 mb-5">
+    <form (ngSubmit)='submitQuote(quoteForm) ;quoteForm.resetForm({})' #quoteForm= 'ngForm' class="w-50 mt-5 mb-5">
         <div class="form-group">
             <label for="description">Quote:</label>
-            <textarea class="form-control" id="description" rows="4"  name="description" ></textarea>
-            <div  class="alert alert-danger">
+            <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required></textarea>
+            <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
                 <p>A Quote is required</p>
             </div>
         </div>
         <div class="form-group">
             <label for="author">Author:</label>
-            <input type="text"  name="author" class="form-control" required>
-           <div  class ="alert alert-danger">
+            <input type="text" id="author" [(ngModel)]="newQuote.author" name="author" #author='ngModel' class="form-control" required>
+           <div [hidden] = "author.valid || author.pristine" class ="alert alert-danger">
                <p>Author is required</p>
            </div>
         </div>
         <div class="form-group">
             <label for="name">Posted by:</label>
-            <input type="text"  class="form-control" required>
-           <div class ="alert alert-danger">
+            <input type="text" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' class="form-control" required>
+           <div [hidden] = "name.valid || name.pristine" class ="alert alert-danger">
                <p>Name is required</p>
            </div>
         </div>
